<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/register_send_tel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y10"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginBottom="@dimen/x10"
        android:text=""
        android:textColor="@color/login_title_color"
        android:textSize="@dimen/x13"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/register_verification_code_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y30"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:background="@drawable/edit_bg"
            android:drawablePadding="@dimen/x10"
            android:gravity="center_vertical"
            android:hint="@string/register_input_your_vertificode"
            android:inputType="number"
            android:maxLength="6"
            android:text=""
            android:textColor="@color/login_title_color"
            android:textColorHint="@color/login_hint_color"
            android:textSize="@dimen/x14" />

        <TextView
            android:id="@+id/get_verification_code_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/x20"
            android:background="@drawable/verification_code_common"
            android:clickable="true"
            android:singleLine="true"
            android:gravity="center"
            android:padding="@dimen/x8"
            android:text="@string/register_verification" />


    </FrameLayout>


    <Button
        android:id="@+id/register_two_next"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/y30"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginTop="@dimen/y16"
        android:background="@drawable/login_btn"
        android:text="@string/register_next"
        android:textColor="@color/white"
        android:textSize="@dimen/x16" />

</LinearLayout>